--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,6 @@ regex = "1.0.5"
 lazy_static = "1.1.0"
 byteorder = "1"
 combine = "3.6"
-combine-language = "3.0"
+# combine-language = "3.0"
 clap = "2.32"
 ordered-float = "1.0"
