--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,14 @@ license = "GPL-3.0-only"
 description = "A rust like language with a stack based vm, alternative name: sabimatai"
 edition = "2018"
 
+[lib]
+name = "sabi"
+path = "src/lib.rs"
+
+[[bin]]
+name = "sabi"
+path = "src/main.rs"
+
 [dependencies]
 regex = "1.0.5"
 lazy_static = "1.1.0"
@@ -14,3 +22,10 @@ combine = "3.6"
 # combine-language = "3.0"
 clap = "2.32"
 ordered-float = "1.0"
+
+[dev-dependencies]
+criterion = "0.2"
+
+[[bench]]
+name = "benchmark"
+harness = false
